Fixes weird vertical spacing on figure images.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6644,7 +6644,7 @@ tbody tr {
   }
 }
 /* topdoc
-  name: Simple base style modifiers
+  name: Figure updates
   family: cfgov-cf-enhancements
   patterns:
     - name: figure.figure__bordered
@@ -6655,6 +6655,9 @@ tbody tr {
   tags:
     - cfgov-cf-enhancements
 */
+figure img {
+  vertical-align: middle;
+}
 .figure__bordered img {
   border: 1px solid #babbbd;
 }
